disable single resource api. (#264)
* disable resource api.


* address comments.


---------
