# openapi/openapi.yaml
@@ -11,219 +11,6 @@ servers:
   - url: https://api.stage.openshift.com
     description: Staging server
 paths:
-  /api/maestro/v1/resources:
-    get:
-      summary: Returns a list of resources
-      security:
-        - Bearer: []
-      responses:
-        '200':
-          description: A JSON array of resource objects
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ResourceList'
-        '401':
-          description: Auth token is invalid
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '403':
-          description: Unauthorized to perform operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: Unexpected error occurred
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      parameters:
-      - $ref: '#/components/parameters/page'
-      - $ref: '#/components/parameters/size'
-      - $ref: '#/components/parameters/search'
-      - $ref: '#/components/parameters/orderBy'
-      - $ref: '#/components/parameters/fields'
-    post:
-      summary: Create a new resource
-      security:
-        - Bearer: []
-      requestBody:
-        description: Resource data
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Resource'
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Resource'
-        '400':
-          description: Validation errors occurred
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '401':
-          description: Auth token is invalid
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '403':
-          description: Unauthorized to perform operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '409':
-          description: Resource already exists
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: An unexpected error occurred creating the resource
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /api/maestro/v1/resources/{id}:
-    get:
-      summary: Get an resource by id
-      security:
-        - Bearer: []
-      responses:
-        '200':
-          description: Resource found by id
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Resource'
-        '401':
-          description: Auth token is invalid
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '403':
-          description: Unauthorized to perform operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '404':
-          description: No resource with specified id exists
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: Unexpected error occurred
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-    patch:
-      summary: Update an resource
-      security:
-        - Bearer: []
-      requestBody:
-        description: Updated resource data
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ResourcePatchRequest'
-      responses:
-        '200':
-          description: Resource updated successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Resource'
-        '400':
-          description: Validation errors occurred
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '401':
-          description: Auth token is invalid
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '403':
-          description: Unauthorized to perform operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '404':
-          description: No resource with specified id exists
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '409':
-          description: Resource already exists
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: Unexpected error updating resource
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-    delete:
-      summary: Delete a resource
-      security:
-        - Bearer: []
-      responses:
-        '204':
-          description: Resource deleted successfully
-        '400':
-          description: Validation errors occurred
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '401':
-          description: Auth token is invalid
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '403':
-          description: Unauthorized to perform operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '404':
-          description: No resource with specified id exists
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: Unexpected error deleting resource
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-    parameters:
-    - $ref: '#/components/parameters/id'
   /api/maestro/v1/resource-bundles:
     get:
       summary: Returns a list of resource bundles
@@ -262,7 +49,7 @@ paths:
       - $ref: '#/components/parameters/fields'
   /api/maestro/v1/resource-bundles/{id}:
     get:
-      summary: Get an resource bundle by id
+      summary: Get a resource bundle by id
       security:
         - Bearer: []
       responses:
@@ -292,6 +79,45 @@ paths:
                 $ref: '#/components/schemas/Error'
         '500':
           description: Unexpected error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      parameters:
+      - $ref: '#/components/parameters/id'
+    delete:
+      summary: Delete a resource bundle
+      security:
+        - Bearer: []
+      responses:
+        '204':
+          description: Resource bundle deleted successfully
+        '400':
+          description: Validation errors occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Auth token is invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Unauthorized to perform operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: No resource bundle with specified id exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Unexpected error deleting resource bundle
           content:
             application/json:
               schema:
@@ -384,7 +210,7 @@ paths:
                 $ref: '#/components/schemas/Error'
   /api/maestro/v1/consumers/{id}:
     get:
-      summary: Get an consumer by id
+      summary: Get a consumer by id
       security:
         - Bearer: []
       responses:
@@ -564,65 +390,6 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/Error'
-    Resource:
-      allOf:
-      - $ref: '#/components/schemas/ObjectReference'
-      - type: object
-        properties:
-          name:
-            type: string
-          consumer_name:
-            type: string
-          version:
-            type: integer
-          created_at:
-            type: string
-            format: date-time
-          updated_at:
-            type: string
-            format: date-time
-          deleted_at:
-            type: string
-            format: date-time
-          manifest:
-            type: object
-          group_resource:
-            type: object
-          delete_option:
-            type: object
-          update_strategy:
-            type: object
-          status:
-            type: object
-    ResourceList:
-      allOf:
-      - $ref: '#/components/schemas/List'
-      - type: object
-        properties:
-          items:
-            type: array
-            items:
-              $ref: '#/components/schemas/Resource'
-    ResourcePatchRequest:
-      type: object
-      properties:
-        version:
-          type: integer
-        manifest:
-          type: object
-        delete_option:
-          type: object
-        update_strategy:
-          type: object
-    ResourceBundleList:
-      allOf:
-      - $ref: '#/components/schemas/List'
-      - type: object
-        properties:
-          items:
-            type: array
-            items:
-              $ref: '#/components/schemas/ResourceBundle'
     ResourceBundle:
       allOf:
       - $ref: '#/components/schemas/ObjectReference'
@@ -657,6 +424,15 @@ components:
               type: object
           status:
             type: object
+    ResourceBundleList:
+      allOf:
+      - $ref: '#/components/schemas/List'
+      - type: object
+        properties:
+          items:
+            type: array
+            items:
+              $ref: '#/components/schemas/ResourceBundle'
     Consumer:
       allOf:
         - $ref: '#/components/schemas/ObjectReference'
