# pkg/api/openapi/model_resource_list.go
@@ -1,223 +1,0 @@
-/*
-maestro Service API
-
-maestro Service API
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package openapi
-
-import (
-	"encoding/json"
-)
-
-// checks if the ResourceList type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &ResourceList{}
-
-// ResourceList struct for ResourceList
-type ResourceList struct {
-	Kind  string     `json:"kind"`
-	Page  int32      `json:"page"`
-	Size  int32      `json:"size"`
-	Total int32      `json:"total"`
-	Items []Resource `json:"items"`
-}
-
-// NewResourceList instantiates a new ResourceList object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewResourceList(kind string, page int32, size int32, total int32, items []Resource) *ResourceList {
-	this := ResourceList{}
-	this.Kind = kind
-	this.Page = page
-	this.Size = size
-	this.Total = total
-	this.Items = items
-	return &this
-}
-
-// NewResourceListWithDefaults instantiates a new ResourceList object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewResourceListWithDefaults() *ResourceList {
-	this := ResourceList{}
-	return &this
-}
-
-// GetKind returns the Kind field value
-func (o *ResourceList) GetKind() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Kind
-}
-
-// GetKindOk returns a tuple with the Kind field value
-// and a boolean to check if the value has been set.
-func (o *ResourceList) GetKindOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Kind, true
-}
-
-// SetKind sets field value
-func (o *ResourceList) SetKind(v string) {
-	o.Kind = v
-}
-
-// GetPage returns the Page field value
-func (o *ResourceList) GetPage() int32 {
-	if o == nil {
-		var ret int32
-		return ret
-	}
-
-	return o.Page
-}
-
-// GetPageOk returns a tuple with the Page field value
-// and a boolean to check if the value has been set.
-func (o *ResourceList) GetPageOk() (*int32, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Page, true
-}
-
-// SetPage sets field value
-func (o *ResourceList) SetPage(v int32) {
-	o.Page = v
-}
-
-// GetSize returns the Size field value
-func (o *ResourceList) GetSize() int32 {
-	if o == nil {
-		var ret int32
-		return ret
-	}
-
-	return o.Size
-}
-
-// GetSizeOk returns a tuple with the Size field value
-// and a boolean to check if the value has been set.
-func (o *ResourceList) GetSizeOk() (*int32, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Size, true
-}
-
-// SetSize sets field value
-func (o *ResourceList) SetSize(v int32) {
-	o.Size = v
-}
-
-// GetTotal returns the Total field value
-func (o *ResourceList) GetTotal() int32 {
-	if o == nil {
-		var ret int32
-		return ret
-	}
-
-	return o.Total
-}
-
-// GetTotalOk returns a tuple with the Total field value
-// and a boolean to check if the value has been set.
-func (o *ResourceList) GetTotalOk() (*int32, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Total, true
-}
-
-// SetTotal sets field value
-func (o *ResourceList) SetTotal(v int32) {
-	o.Total = v
-}
-
-// GetItems returns the Items field value
-func (o *ResourceList) GetItems() []Resource {
-	if o == nil {
-		var ret []Resource
-		return ret
-	}
-
-	return o.Items
-}
-
-// GetItemsOk returns a tuple with the Items field value
-// and a boolean to check if the value has been set.
-func (o *ResourceList) GetItemsOk() ([]Resource, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return o.Items, true
-}
-
-// SetItems sets field value
-func (o *ResourceList) SetItems(v []Resource) {
-	o.Items = v
-}
-
-func (o ResourceList) MarshalJSON() ([]byte, error) {
-	toSerialize, err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o ResourceList) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["kind"] = o.Kind
-	toSerialize["page"] = o.Page
-	toSerialize["size"] = o.Size
-	toSerialize["total"] = o.Total
-	toSerialize["items"] = o.Items
-	return toSerialize, nil
-}
-
-type NullableResourceList struct {
-	value *ResourceList
-	isSet bool
-}
-
-func (v NullableResourceList) Get() *ResourceList {
-	return v.value
-}
-
-func (v *NullableResourceList) Set(val *ResourceList) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableResourceList) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableResourceList) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableResourceList(val *ResourceList) *NullableResourceList {
-	return &NullableResourceList{value: val, isSet: true}
-}
-
-func (v NullableResourceList) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableResourceList) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
