# pkg/api/openapi/model_resource_list_all_of.go
@@ -1,124 +1,0 @@
-/*
-maestro Service API
-
-maestro Service API
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package openapi
-
-import (
-	"encoding/json"
-)
-
-// checks if the ResourceListAllOf type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &ResourceListAllOf{}
-
-// ResourceListAllOf struct for ResourceListAllOf
-type ResourceListAllOf struct {
-	Items []Resource `json:"items,omitempty"`
-}
-
-// NewResourceListAllOf instantiates a new ResourceListAllOf object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewResourceListAllOf() *ResourceListAllOf {
-	this := ResourceListAllOf{}
-	return &this
-}
-
-// NewResourceListAllOfWithDefaults instantiates a new ResourceListAllOf object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewResourceListAllOfWithDefaults() *ResourceListAllOf {
-	this := ResourceListAllOf{}
-	return &this
-}
-
-// GetItems returns the Items field value if set, zero value otherwise.
-func (o *ResourceListAllOf) GetItems() []Resource {
-	if o == nil || IsNil(o.Items) {
-		var ret []Resource
-		return ret
-	}
-	return o.Items
-}
-
-// GetItemsOk returns a tuple with the Items field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ResourceListAllOf) GetItemsOk() ([]Resource, bool) {
-	if o == nil || IsNil(o.Items) {
-		return nil, false
-	}
-	return o.Items, true
-}
-
-// HasItems returns a boolean if a field has been set.
-func (o *ResourceListAllOf) HasItems() bool {
-	if o != nil && !IsNil(o.Items) {
-		return true
-	}
-
-	return false
-}
-
-// SetItems gets a reference to the given []Resource and assigns it to the Items field.
-func (o *ResourceListAllOf) SetItems(v []Resource) {
-	o.Items = v
-}
-
-func (o ResourceListAllOf) MarshalJSON() ([]byte, error) {
-	toSerialize, err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o ResourceListAllOf) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Items) {
-		toSerialize["items"] = o.Items
-	}
-	return toSerialize, nil
-}
-
-type NullableResourceListAllOf struct {
-	value *ResourceListAllOf
-	isSet bool
-}
-
-func (v NullableResourceListAllOf) Get() *ResourceListAllOf {
-	return v.value
-}
-
-func (v *NullableResourceListAllOf) Set(val *ResourceListAllOf) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableResourceListAllOf) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableResourceListAllOf) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableResourceListAllOf(val *ResourceListAllOf) *NullableResourceListAllOf {
-	return &NullableResourceListAllOf{value: val, isSet: true}
-}
-
-func (v NullableResourceListAllOf) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableResourceListAllOf) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
